Move audio files.

--- a/sv-app-proto.html
+++ b/sv-app-proto.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<audio src="./drums.ogg" preload="metadata" controls></audio>
+<audio src="./audio-assets/drums.ogg" preload="metadata" controls></audio>
 <div id="track-1"></div>
 
 </body>
