--- a/test-load-large-audio-no-vamp.html
+++ b/test-load-large-audio-no-vamp.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<audio src="./LongerFile.mp3" preload="metadata" controls></audio>
+<audio src="./audio-assets/LongerFile.mp3" preload="metadata" controls></audio>
 <pre id="status-message">Loading..</pre>
 <div id="track-1"></div>
 
