--- a/sv-app-proto.html
+++ b/sv-app-proto.html
@@ -12,9 +12,9 @@
 <div id="track-1"></div>
 
 </body>
-<script src="./waves-ui.min.js"></script>
-<script src="./Vamp.js"></script>
-<script src="./VampUtils.js"></script>
+<script src="./js/waves-ui.min.js"></script>
+<script src="./js/Vamp.js"></script>
+<script src="./js/VampUtils.js"></script>
 <script>
     // Web Audio stuff using the MediaElementAudioNode for loading longer audio files
     const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
