--- a/test-load-large-audio-no-vamp.html
+++ b/test-load-large-audio-no-vamp.html
@@ -13,7 +13,7 @@
 <div id="track-1"></div>
 
 </body>
-<script src="./waves-ui.min.js"></script>
+<script src="./js/waves-ui.min.js"></script>
 <script>
     // Web Audio stuff using the MediaElementAudioNode for loading longer audio files
     const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
